--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 MONGODB_URI="mongodb+srv://mbhartinna2008:JRj6AFxsoWg48Gpn@cluster0.1fety08.mongodb.net"
 PORT=5000
 JWT_SECRET="gs#secret"
+
+CLOUDINARY_CLOUD_NAME="chatApp"
+CLOUDINARY_API_KEY="664121318246728"
+CLOUDINARY_API_SECRET="6Dx-JkAiGOphK_llzH_IQ6GG2Rw"
