profilePage update changes

--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,6 @@ MONGODB_URI="mongodb+srv://mbhartinna2008:JRj6AFxsoWg48Gpn@cluster0.1fety08.mong
 PORT=5000
 JWT_SECRET="gs#secret"
 
-CLOUDINARY_CLOUD_NAME="chatApp"
-CLOUDINARY_API_KEY="664121318246728"
-CLOUDINARY_API_SECRET="6Dx-JkAiGOphK_llzH_IQ6GG2Rw"
+CLOUDINARY_CLOUD_NAME='dtt4ftdrw'
+CLOUDINARY_API_KEY='664121318246728'
+CLOUDINARY_API_SECRET='6Dx-JkAiGOphK_llzH_IQ6GG2Rw'
