--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-MONGODB_URI="mongodb+srv://mbhartinna2008:JRj6AFxsoWg48Gpn@cluster0.1fety08.mongodb.net"
+MONGODB_URI=
 PORT=5000
-JWT_SECRET="gs#secret"
+JWT_SECRET=
 
-CLOUDINARY_CLOUD_NAME='dtt4ftdrw'
-CLOUDINARY_API_KEY='664121318246728'
-CLOUDINARY_API_SECRET='6Dx-JkAiGOphK_llzH_IQ6GG2Rw'
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
